src/component/file_browser/snapshots/envision__component__file_browser__snapshot_tests__render_empty.snap
---
source: src/component/file_browser/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│/ / empty                                                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
