src/component/file_browser/snapshots/envision__component__file_browser__snapshot_tests__render_with_selection_markers.snap
---
source: src/component/file_browser/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│/                                                         │
│✓ 📁  src                                                  │
│  📁  tests                                                │
│  📄  Cargo.toml  1.0K                                     │
│  📄  main.rs  512B                                        │
│  📄  README.md  2.0K                                      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
