src/component/file_browser/snapshots/envision__component__file_browser__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/file_browser/snapshot_tests.rs
expression: terminal.backend().to_string()
---
/                                       
  📁  src                                
  📁  tests                              
  📄  Cargo.toml  1.0K                   
  📄  main.rs  512B                      
  📄  README.md  2.0K
